--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -7,10 +7,10 @@
 	<title>Fog</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<style type="text/css">
-		body { background: #F0F0F0; }
+		body { background: #F0F0F0; font-family: sans-serif; }
 	</style>
 </h:head>
 <h:body>
-	<h:outputText value="#{homeBean.hello}" />
+	<h:outputText value="#{managedBean.hello}" />
 </h:body>
 </html>
